IT19208718 Initial main design 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="menu_supplier_profile">Add New Rider</string>
 
     <string name="logged_mobile_number">07XXXXXXXX</string>  <!-- This is for logged users -->
-    <string name="menu_login_register">Login/Register</string> <!-- This is for not logged users -->
+    <string name="menu_login_register">Login/Register</string> <!-- This is for non logged users -->
 
     <!-- IT19208718 | S.M.H.M.Suraweera -->
     <string name="add_new_rider">Add new rider</string>
@@ -32,7 +32,7 @@
     <string name="rider_commission">Commission</string>
     <string name="rider_default_password">Password</string>
     <string name="rider_btn">Add now</string>
-    <string name="rider_photo">Add new photo</string>
+    <string name="rider_photo">Add a photo</string>
 
     <string name="rider_profile">Welcome Rider</string>
     <string name="rider_profile_order_for_distribution">Orders for distribution</string>
@@ -40,7 +40,36 @@
     <string name="rider_profile_distributed_orders">Distributed orders</string>
     <string name="rider_profile_manage_account">My account</string>
     <string name="rider_profile_logout">Logout</string>
-    <string name="rider_profile_welcome">Change your details</string>
+    <string name="rider_profile_welcome">Update detials</string>
+
+
+    <string name="ordered_food_name">Burger Hagover</string>
+    <string name="ordered_food_quantity">Quantity : 02</string>
+    <string name="ordered_food_price">Price : 1790LKR</string>
+    <string name="ordered_food_delivery_mobile">Mobile : 0774809190</string>
+    <string name="ordered_food_delivery_address">Address : No 2, DK Street, Colombo 02</string>
+    <string name="ordered_food_mark_as_shipped_btn_txt">Mark as shipped</string>
+    <string name="ordered_food_mark_as_cancel_btn_txt">Mark as cancel</string>
+    <string name="orders_for_distribution_welcome">Orders for distribution</string>
+
+
+    <string name="distributed_orders_welcome">Distributed orders</string>
+    <string name="distributed_orders_food_name">Burger Hagover</string>
+    <string name="distributed_orders_food_quantity">Quantity : 02</string>
+    <string name="distributed_orders_food_price">Price : 1790LKR</string>
+    <string name="distributed_orders_mobile">Mobile : 0774809190</string>
+    <string name="distributed_orders_address">Address : No 2, DK Street, Colombo 02</string>
+
+
+    <string name="sales_report_welcome">Daily sales reprt</string>
+    <string name="sales_report_date">Date : 10/09/2020</string>
+    <string name="sales_report_total_delivered_qty">Total delivered : 10</string>
+    <string name="sales_report_total_amount">Total amount : 6790 LKR</string>
+    <string name="sales_report_commission">Commission : 1018.50 LKR</string>
+    <string name="sales_report_show_yesterday">Show yesterday</string>
+
+
+
 
 
 </resources>
