--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,9 +67,27 @@
     <string name="sales_report_total_amount">Total amount : 6790 LKR</string>
     <string name="sales_report_commission">Commission : 1018.50 LKR</string>
     <string name="sales_report_show_yesterday">Show yesterday</string>
-
-
-
+    <string name="Item_name">ITEM NAME</string>
+    <string name="order_quantity">QUANTITY</string>
+    <string name="order_address">ADDRESS</string>
+    <string name="order_mobile">MOBILE NUMBER</string>
+    <string name="send_to_suppliers">SEND TO SUPPLIER</string>
+    <string name="item_name">Order Item</string>
+    <string name="add_new_supplier">Add new supplier</string>
+    <string name="supplier_name">SUPPLIER NAME</string>
+    <string name="supplier_mobile_number">MOBILE NUMBER</string>
+    <string name="supply_item">SUPPLY ITEM</string>
+    <string name="supplier_default_password">PASSWORD</string>
+    <string name="supplier_btn">ADD NOW</string>
+    <string name="supplier_profile">Welcome supplier</string>
+    <string name="supplier_profile_manage_account">MY ACCOUNT</string>
+    <string name="received_request_item">RECeIVED REQUEST ITEMS</string>
+    <string name="daily_received_report">DAILY RECEIVED REPORT</string>
+    <string name="supplier_profile_logout">LOG OUT</string>
+    <string name="supplier_profile_welcome">Update details</string>
+    <string name="Supplier_name">vimal perera</string>
+    <string name="Supplier_Name">supplier name</string>
+    <string name="supplier_photo">supplier photo</string>
 
 
 </resources>
