--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,5 +128,6 @@
     <string name="owner_login">Owner Login</string>
     <string name="owner">Owner</string>
 
-
+    <string name = "harsha">harsha</strig>
+    
 </resources>
