--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="owner">Owner</string>
 
     <string name = "harsha">hhhhhhhhhhhhhh</string>
+    <string name = "harsha2">ssssssss</string>
     
 </resources>
