--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,7 +128,7 @@
     <string name="owner_login">Owner Login</string>
     <string name="owner">Owner</string>
 
-    <string name = "harsha">hhhhhhhhhhhhhh</string>
+    <string name = "harsha">harsha</string>
     
     
 </resources>
