--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,6 @@
     <string name="owner">Owner</string>
 
     <string name = "harsha">harsha1</string>
-    
+    <string name = "harsha2">harsha2</string>
     
 </resources>
