--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,13 @@
     <string name="harsha">harsha1</string>
     <string name="harsha2">harsha2</string>
 
+    <string name="nameError1">Enter a valid name</string>
+    <string name="mobileError1">This number is not valid</string>
+    <string name="nicError1">Provide a correct NIC</string>
+    <string name="pwdError1">Should contain six characters</string>
+    <string name="bikeNumbError1">Use correct format (XX-XXXX)</string>
+    <string name="commError1">Commission should less than 100%</string>
+    <string name="unErrorLoginScreen">Enter the correct username</string>
+
+
 </resources>
