--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,8 @@
     <string name="bikeNumbError1">Use correct format (XX-XXXX)</string>
     <string name="commError1">Commission should less than 100%</string>
     <string name="unErrorLoginScreen">Enter the correct username</string>
+    <string name="invalid_name">Please enter a valid Name</string>
+    <string name="invalid_mobile_number">Please enter a valid Phone number</string>
 
 
 </resources>
