--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,21 +100,21 @@
     <string name="login_btn">Login Now</string>
 
 
-    <string name="Item_name">ITEM NAME</string>
-    <string name="order_quantity">QUANTITY</string>
-    <string name="order_address">ADDRESS</string>
-    <string name="order_mobile">MOBILE NUMBER</string>
+    <string name="Item_name">Item Name</string>
+    <string name="order_quantity">Quantity</string>
+    <string name="order_address">Address</string>
+    <string name="order_mobile">Mobile Number</string>
     <string name="send_to_suppliers">SEND TO SUPPLIER</string>
     <string name="item_name">Order Item</string>
     <string name="add_new_supplier">Add new supplier</string>
-    <string name="supplier_name">SUPPLIER NAME</string>
-    <string name="supplier_mobile_number">MOBILE NUMBER</string>
-    <string name="supply_item">SUPPLY ITEM</string>
-    <string name="supplier_default_password">PASSWORD</string>
+    <string name="supplier_name">Supplier Name</string>
+    <string name="supplier_mobile_number">Mobile Number</string>
+    <string name="supply_item">Supply Item</string>
+    <string name="supplier_default_password">Password</string>
     <string name="supplier_btn">ADD NOW</string>
     <string name="supplier_profile">Welcome supplier</string>
     <string name="supplier_profile_manage_account">MY ACCOUNT</string>
-    <string name="received_request_item">RECeIVED REQUEST ITEMS</string>
+    <string name="received_request_item">RECEIVED REQUEST ITEMS</string>
     <string name="daily_received_report">DAILY RECEIVED REPORT</string>
     <string name="supplier_profile_logout">LOG OUT</string>
     <string name="supplier_profile_welcome">Update details</string>
